tests/paczka1/fuzzy1/91138665.err
Error in line 6: 6LQAEov S552 13,1
Error in line 4: YaQTxlL8 A15 24,0
Error in line 13: WbNkOX1p S108 59,18
Error in line 9: 6LQAEov A15 3,3
Error in line 19: WbNkOX1p A15 47,1
Error in line 27: YaQTxlL8 A15 55,7
Error in line 25: WbNkOX1p S108 51,7
